# memra

./: .gitignore  Cargo.toml  LICENSE  Procfile  README.md  Rocket.toml  Rocket.toml.example  RustConfig  build.rs
app/: package-lock.json  package.json
app/public/: index.html
app/src/: App.js  index.js
app/src/pages/home/: home.js  style.css
app/src/pages/home2/: home2.js  style2.css
migrations/2022-05-29-182643_create_users/: up.sql
migrations/2022-05-29-183753_create_decks/: up.sql
migrations/2022-05-29-184851_create_courses/: up.sql
migrations/2022-05-29-185015_create_cards/: up.sql
migrations/2022-05-29-185306_create_history/: up.sql
migrations/2022-05-29-185449_create_credentials/: down.sql  up.sql
migrations/2022-05-29-185642_create_settings/: up.sql
migrations/2022-05-29-185811_create_addons/: down.sql  up.sql
migrations/2022-05-29-190322_create_followers/: up.sql
migrations/2022-05-29-190631_create_coursedecks/: down.sql  up.sql
migrations/2022-05-29-190820_create_deck_subscriptions/: down.sql  up.sql
migrations/2022-05-29-190949_create_course_subscriptions/: down.sql  up.sql
migrations/2022-05-29-191056_create_notifications/: up.sql
src/: auth.rs  lib.rs  main.rs  models.rs  schema.rs  user.rs
