[package]
name = "memra"
description = "Server API implementation for Memra."
version = "0.1.0"
edition = "2021"
authors = ["Eli Blaney <eliblaney@gmail.com>", "David Law <davidlaw.professional@gmail.com>"]
repository = "https://eliblaney.com/eliblaney/memra"
homepage = "https://memra.app"
readme = "README.md"
license-file = "LICENSE"

[[bin]]
name = "memra"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = { version = "0.6.0-alpha1", default-features = false }
serde = "1.0.137"
jsonwebtoken = { version = "8", default-features = false }
lazy_static = "1.4"
chrono = "0.4"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
